--- a/mvc/wwwroot/css/site.css
+++ b/mvc/wwwroot/css/site.css
@@ -3,26 +3,35 @@
     På dokumentet står det (<= 1024px);
 */
 @media  (max-width: 1024px) {
-  .article-summary {
-      flex-direction: row;
-  }
+  /* .article-summary {
+      
+  } */
 
   .pinned-articles {
-      flex-direction: row;
+      margin: 25px 15 px;
+      width: 30%;
   }
+   img {
+       height: 200px;
+       overflow: hidden;
+   }
 }
 
 /* På dokumentet står det (< 700px) */
 @media (max-width: 699px) and (min-width: 360px) {
 
     .article-summary {
-        flex-direction: column;
-
+        flex-direction: row;
+        
     }
 
+    .pinned-articles-container {
+        flex-direction: row;
+        flex-wrap: wrap;
+    } 
     .pinned-articles {
-        flex-direction: column;
-
+        margin: 25px 10px;
+        width: 45%;
     }
     /* background-color: green;*/
     /* Byt tema texten ska döljas */
@@ -33,21 +42,30 @@ html, body {
 
     margin: 0;
     padding: 0;
-    background-color: ;
+    background-color: #e5e7e5;
 }
 
-header {
+header, .header-items {
     padding: 10px;
-    display: flex;
+    display: block;
     height: 100%;
     margin: 0px auto;
     background-color: #548052;
     color: white;
+    
 }
+
 
 /* -------------- THEME TOGGLE BTN --------------*/
 
-
+.toggle-btn {
+    float: right;
+   
+}
+.input {    
+opacity: 0;
+}
+  
 
 /* ----------- END OF THEME TOGGLE BTN ----------*/
 
@@ -59,21 +77,62 @@ footer {
     background-color: #14342b;
     color: white;
 }
+
+
 /* ---------------- END OF FOOTER ------------------*/
 
 /* --------------- PINNED ARTICLES -----------------*/
 
-.pinned-articles {
+.pinned-articles-container {
     display: grid;
+    grid-template-columns: 200px 200px 200px;
+    grid-gap: 10px;
+    width: fit-content;
+    
+
+    /* 
+    När jag har fixat flexbox och responsive kan jag köra allt center
+    men tillsvidare så att det ser "snyggt" ut när man kör splitscreen
+    kommer denna vara avkommenterad
+    justify-items: center; 
+    
+    */
+    
     max-width: calc(100% - 40px);
-    background-color: blueviolet;
+    /* text-decoration: none; */
+    /* flex-direction: column; */
+    /* margin: 0 auto 75px; */
+    margin: 20px;
 }
 
-/* img {
-    width: 100%;
-    height: 100%;
-    object-fit: fill;
-} */
+img {
+    /* width: 100%; */
+    /* height: 100%; */
+    /* object-fit: fill; */
+    width: 200px;
+    height: 100px;
+    
+} 
+
+
+#text-content {
+    text-decoration: none;
+    background-color: white;
+    width: 200px;
+    height: 100px;
+    
+    overflow: hidden;
+}
+
+#pinned-author {
+    text-align: right;
+}
+
+img, #text-content {
+    border-radius: 5px;
+}
+
+
 
 /* --------------- END OF PIN.ART. -----------------*/
 
@@ -85,6 +144,11 @@ footer {
     height: 106px;
 } */
 
+.article-container {
+    margin-left: 20px;
+    width: 665px;
+    background-color: white;
+}
 .article-summary-box {
     display: grid;
     grid-template-areas:
@@ -96,6 +160,7 @@ footer {
     text-decoration: none;
     margin:0;
     justify-content:left;
+    /* justify-items: center; */
 }
 
 #date {
@@ -104,9 +169,11 @@ footer {
     margin-right: 0.5rem;
     width: 3.5rem;
     
+    margin-top: 0.8rem;
     grid-area: date;
     text-align: center;
     
+
     color: #999; /* Tills jag klurar ut hur jag fixar Timestampen kör jag en fejk muted text */
     
 }
@@ -173,7 +240,8 @@ button {
 
 .ad-container {
     grid-area: ads;
-    
+    display: flex;
+    justify-content: right;
 }
 
 /* ------------------ END OF ADS --------------------*/
