--- a/mvc/wwwroot/css/site.css
+++ b/mvc/wwwroot/css/site.css
@@ -4,7 +4,7 @@
 */
 @media  (max-width: 1024px) {
   /* .article-summary {
-      
+
   } */
 
   .pinned-articles {
@@ -22,13 +22,13 @@
 
     .article-summary {
         flex-direction: row;
-        
+
     }
 
     .pinned-articles-container {
         flex-direction: row;
         flex-wrap: wrap;
-    } 
+    }
     .pinned-articles {
         margin: 25px 10px;
         width: 45%;
@@ -52,34 +52,36 @@ header, .header-items {
     margin: 0px auto;
     background-color: #548052;
     color: white;
-    
+    font-family: Arial, Helvetica, sans-serif;
+
 }
 
 
 /* -------------- THEME TOGGLE BTN --------------*/
-
 .toggle-btn {
-    float: right;
-   
+   float: right;
 }
-.input {    
-opacity: 0;
+
+@media (prefers-color-scheme: dark) {
+
+    html, body {
+        background-color: #14342b;
+    }
+
+    #text-content {
+        background-color: #677967;
+        color: white;
+    }
+
+    .article-container {
+        background-color: #677967;
+        color: white;
+    }
+
 }
-  
 
 /* ----------- END OF THEME TOGGLE BTN ----------*/
 
-/* ------------------- FOOTER --------------------*/
-footer {
-    display: flex;
-    height: 100px;
-    margin: 0px auto;
-    background-color: #14342b;
-    color: white;
-}
-
-
-/* ---------------- END OF FOOTER ------------------*/
 
 /* --------------- PINNED ARTICLES -----------------*/
 
@@ -88,16 +90,16 @@ footer {
     grid-template-columns: 200px 200px 200px;
     grid-gap: 10px;
     width: fit-content;
-    
 
-    /* 
+
+    /*
     När jag har fixat flexbox och responsive kan jag köra allt center
     men tillsvidare så att det ser "snyggt" ut när man kör splitscreen
     kommer denna vara avkommenterad
-    justify-items: center; 
-    
+    justify-items: center;
+
     */
-    
+
     max-width: calc(100% - 40px);
     /* text-decoration: none; */
     /* flex-direction: column; */
@@ -105,33 +107,46 @@ footer {
     margin: 20px;
 }
 
+
 img {
     /* width: 100%; */
     /* height: 100%; */
     /* object-fit: fill; */
     width: 200px;
     height: 100px;
-    
-} 
 
+}
 
 #text-content {
     text-decoration: none;
     background-color: white;
     width: 200px;
     height: 100px;
-    
+
     overflow: hidden;
+}
+
+#pinned-title {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 14px;
 }
 
 #pinned-author {
     text-align: right;
+    color: #999;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 12px;
 }
 
 img, #text-content {
     border-radius: 5px;
 }
 
+#pinned-date{
+    color: #999;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 11px;
+}
 
 
 /* --------------- END OF PIN.ART. -----------------*/
@@ -168,14 +183,14 @@ img, #text-content {
     /* display: inline-block; */
     margin-right: 0.5rem;
     width: 3.5rem;
-    
+
     margin-top: 0.8rem;
     grid-area: date;
     text-align: center;
-    
+
 
     color: #999; /* Tills jag klurar ut hur jag fixar Timestampen kör jag en fejk muted text */
-    
+
 }
 
 .article-p-tag {
@@ -193,11 +208,11 @@ img, #text-content {
     width: 500px;
     font-family: 'Times New Roman', Times, serif;
     font-size: 14px;
-    
+
 }
 
 #title {
-    
+
     /* display: inline-block; */
     /* padding-top: 1.25rem; */
     font-weight: bold;
@@ -205,19 +220,20 @@ img, #text-content {
 }
 
 #intro {
-    
+
     margin-top: 0.35rem;
     display: block;
     text-overflow: ellipsis;
     overflow: hidden;
     white-space:nowrap;
-    
+
     direction: ltr;
 }
 
 button {
 
-    text-align: center; 
+    text-align: center;
+    cursor: pointer;
     margin: auto;
     border: none;
     padding: 10px;
@@ -231,7 +247,7 @@ button {
     text-decoration: none;
     justify-content:center;
     /* align-items: center; */
-    
+
 }
 
 /* ----------------- END OF ART.SUM. ----------------*/
@@ -245,3 +261,71 @@ button {
 }
 
 /* ------------------ END OF ADS --------------------*/
+
+/* ------------------- FOOTER --------------------*/
+
+footer {
+    display: inline-block;
+    height: 100px;
+    margin: 0px auto;
+    background-color: #14342b;
+    color: white;
+
+    padding: 10px;
+
+    height: 100%;
+    margin: 0px auto;
+
+    font-family: Arial, Helvetica, sans-serif;
+
+
+}
+
+.footer-items {
+    position: absolute;
+    bottom: 0;
+    left: 0px;
+    height: 60px;
+    /* Height of the footer */
+    width: 100%;
+
+}
+#adress-section {
+    display: block;
+    float: left;
+       
+        width:auto;
+        /* background-color :green; */
+
+}
+
+#adress-title {
+ font-size: 18px;
+}
+
+#adress {
+    font-size: 14px;
+}
+
+.about-us-section {
+
+    text-align:left;
+              float: right;
+       
+        width: 500px;
+        /* background-color: red; */
+}
+
+#about-us-title {
+    font-size: 18px;
+}
+
+#about-us {
+    font-size: 14px;
+}
+
+#admin-lnk {
+    text-decoration: none;
+}
+/* ---------------- END OF FOOTER ------------------*/
+
