--- a/mvc/wwwroot/css/site.css
+++ b/mvc/wwwroot/css/site.css
@@ -39,6 +39,21 @@ html, body {
     color: #ffffff;
 }
 
+.darkmode .blocks-container {
+    background-color: #677967;
+    color: #ffffff;
+}
+
+.darkmode .author-container {
+    background-color: #677967;
+    color: #ffffff;
+}
+
+.darkmode .comments-container {
+    background-color: #677967;
+    color: #ffffff;
+}
+
 /* NAVBAR */
 
 header {   
@@ -108,6 +123,23 @@ img {
     filter: opacity(50%);
 }
 
+/* ADS  */
+
+.ads img{
+    border-radius: 0%;
+}
+
+.ads-container {
+    margin-bottom: 1em;
+    margin-left: 30px;
+    margin-right: 30px;
+}
+
+.ads-container-2 {
+    margin-bottom: 1em;
+    margin-left: 20px;
+    margin-right: 20px;
+}
 
 /* ARTICLE SUMMARIES  */
 .article-container {
@@ -213,7 +245,94 @@ footer {
     padding: .5em;
 }
 
+/* ARTICLE PAGE  */
+
+.main-img {
+    position: relative;
+    margin-top: 1em;
+ }
+ 
+ .article-img {
+     border-radius: 0%;
+     width: 95%;
+     margin-left: auto;
+     margin-right: auto;
+     display: block;
+ }
+ 
+ .article-title {
+     position: absolute;
+     color: #ffffff;
+     text-align: center;
+     text-align: center;
+     z-index: 900;
+     font-size: 3.2vw;
+     top: 50%;
+     left: 0;
+     right: 0;
+ }
+
+ #quote-block {
+     background-color: #548052;
+     color: #ffffff;
+     align-content: center;
+     align-self:center;
+    text-align: center;
+    padding: 2em;
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 18px;
+    font-weight: bold;
+ }
+
+.ads-container-2 {
+    margin: 1em;
+}
+
+.grid {
+    display: grid;
+    grid-template-columns: auto auto;
+    gap: 1em;
+}
+
+ .blocks-container {
+     margin-left: 20px;
+     background-color: #ffffff;
+        align-items: center;
+    padding: 1em;  
+ }
+
+ .blocks-container img {
+     border-radius: 0%;
+ }
+
+ .author-container {
+     padding: .5em;
+     margin-right: 1.5em;
+    max-width: 420px;
+    min-width: 260px;
+    max-height: 420px;
+    min-height: 260px;
+     background-color: #ffffff;
+     text-align: center;
+     padding-bottom: 1.5em;
+ }
+
+ .about-author {
+    display: flex;
+    justify-content: center;
+    margin-left: 1em;
+    margin-right: 1em;
+    align-items: center;
+}
+
+.socials {
+    margin: .5em;
+    
+}
+
+
 /* MEDIA QUERIES  */
+/* OBS! Upptäckte alldeles för sent att det fanns faktiskt utskrivet på dokumentet vilka skärmdimensioner som skulle användas men det hade jag missat. Planerar att fixa det framöver */
 
 /* VERY SMALL SCREENS  */
 @media only screen and (max-width: 415px) {
@@ -226,8 +345,8 @@ footer {
     }
     
     .article-container {
-        margin-left: .5em;
-        margin-right: .5em;
+        margin-left: 1em;
+        margin-right: 1em;
     }
     
     .article-summary-box {
@@ -290,6 +409,53 @@ footer {
         padding-right: 1em;
     }
 
+    .Commercial {
+        margin: 0;
+    }
+   
+    
+    .article-title {
+        font-size: medium;
+    }
+
+    .ads-container-2 {
+        margin: 1em;
+        padding: 0;
+    }
+
+    .grid {
+        display: flex;
+        flex-direction: column-reverse;
+    }
+    
+     .blocks-container {
+         margin-left: 1em;
+         margin-right: 1em;
+     }
+    
+     .author-container {
+        margin-right: 0;
+        min-height: 0;
+        padding: 1em;
+        margin-left: 1em;
+        margin-right: 1em;
+     }
+
+     .author-container p {
+         float: right;
+     }
+
+     .author-container .about-author {
+         float: left;
+     }
+
+     .author img {
+         display: none;
+     }
+    .socials {
+        display: none;      
+    } 
+
 }
 
 @media only screen and (max-width: 600px) {
@@ -310,18 +476,14 @@ footer {
         margin-right: 3em;
     }
 
-    
     footer {
         padding: 2em;    
         position: relative;
-        
     }
 
     #adress-section #adress-title {
         font-size: Small;
     }
-
-    
 
     #adress {
         margin-top: .5em;
@@ -349,8 +511,28 @@ footer {
         right: 0;
         padding-bottom: 1em;
     }
+   
  
  }
+
+@media screen and ( min-width: 700px) {
+    .author {
+        width: 150px;
+    }
+
+    .author-container {
+        margin-right: 1em;
+        padding: 0;
+        min-width: 0;
+        padding: 1em;
+    }
+
+    .about-author {
+        margin-top: 2em;
+        flex-direction: column;
+    }
+}
+    
  @media screen and (min-width: 900px) {
 
     header {
@@ -428,7 +610,15 @@ footer {
     #date {
         font-size: 18px;
     }
+
+    .ads-container {
+        display: none;
+    }
+
+    .ads-container-2 {
+        display: none;
+    }
  
  }
 
-
+/* For now så får ads ha display none på dom större skärmar då jag fortfarande inte fixat portrait mode på reklambilderna. Jag kommer även framöver baka in reklamen i samma container som article-summaries för att få den propert responsive och då kommer ads containern att kunna flexa upp/ner beroende på storlek */
