--- a/mvc/ReactApp/src/App.css
+++ b/mvc/ReactApp/src/App.css
@@ -2,7 +2,6 @@
 
 .admin-header {
     width: 100%;
-    /* width: 100vw; */
     height: 60px;
     background-color: #548052;
     display: flex;
@@ -31,7 +30,6 @@
 
 main {
     display: flex;
-    /* justify-content: center; */
     background-color: #E5E7E5;
 }
 
@@ -70,7 +68,6 @@ main {
 
 .container {
     flex: 1;
-    /* padding-left: 10px; */
     margin-top: 58px;
     margin-right: 100px;
     margin-bottom: 58px; 
@@ -89,11 +86,6 @@ main {
     color: black;
     padding-top: 20px;
     
-}
-
-.inner-header h2 {
-    /* order: -1; */
-    /* padding-top: 20px; */
 }
 
 hr {
@@ -115,7 +107,15 @@ hr {
     padding-bottom: 20px;
     text-decoration: none;
     color: white;
-   
+}
+
+.create-btn:hover {
+    background-color: #BBDFC5;
+}
+
+.create-btn:focus {
+    border: 2px;
+    border-color: black;
 }
 
 .icons {
@@ -128,6 +128,10 @@ hr {
     border-radius: 5px;
 }
 
+.icons:hover {
+    background-color: #BBDFC5;
+}
+
 
 /* ARTICLES  */
 
@@ -138,7 +142,6 @@ hr {
 .content {
     display: block;
     width: 45vw;
-    /* width: 500px; */
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
@@ -167,11 +170,12 @@ input[type=text], select {
   }
 
   input[type=submit], input[type=button] {
-    width: 100%;
+    width: 50%;
     background-color: #4CAF50;
     color: white;
     padding: 14px 20px;
-    margin: 8px 0;
+    margin: auto;
+    display: block;
     border: none;
     border-radius: 4px;
     cursor: pointer;
@@ -181,10 +185,31 @@ input[type=text], select {
     background-color: #45a049;
   }
 
-/* .navbar {
-/* background-color: yellowgreen; */
-/* justify-content: space-around;
-height: 100%;
-} */ 
+  .back-btn {
+    width: 50%;
+    background-color: #d01414b9;
+    color: white;
+    padding: 14px 20px;
+    margin: auto;
+    display: block;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    margin-top: 10px;
+}
+
+a.back-btn {
+    text-decoration: none;
+    text-align: center;
+  }
+
+  .back-btn:hover {
+    background-color: #d01414e0;
+  }
+
+  label {
+    font-weight: 500;
+  }
+
 
 
